# stm32_cpp_examples

./: .gitignore  README.md
GpioInput/: CMakeLists.txt  stm32f4xx_hal_conf.h
GpioInput/openocd/: flash.sh
GpioInput/src/: main.c
HelloWorld/: .gitignore  CMakeLists.txt
HelloWorld/device/: startup_stm32f446xx.s
HelloWorld/linkerScripts/: stm32f446re.ld
HelloWorld/openocd/: flash.sh
HelloWorld/src/: main.c
i2c_master/: CMakeLists.txt  main.cpp  stm32f4xx_hal_conf.h
i2c_master/openocd/: flash.sh
i2c_master/toolchains/: toolchain-arm-none-eabi.cmake
spi_master/: CMakeLists.txt  main.cpp
spi_master/openocd/: flash.sh
st7789_display/: CMakeLists.txt  main.cpp
usart_hal/: CMakeLists.txt  main.cpp  stm32f4xx_hal_conf.h
usart_hal/openocd/: flash.sh
